--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:android": "eas build --platform android"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
